# cissa-website-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 36834b605e75_add_announcement_signatory_and_their_.py  482942238159_add_user_table.py  bb21a478609f_update_published_at_field_in_.py  d3d1ef52c7d2_add_image_url_field_to_announcements.py
app/: main.py
app/api/models/: __init__.py  announcement.py  user.py
app/api/repositories/: announcement.py
app/api/services/: announcement.py
app/api/v1/: __init__.py
app/api/v1/announcement/: routes.py  schemas.py
app/api/v1/auth/: routes.py
app/core/: config.py
app/core/base/: repository.py  schema.py
app/utils/: supabase_storage.py
tests/: conftest.py  test_auth.py  test_root.py
